package com.bayer.datahub.libs.interfaces;

/**
 * {@link Consumer} interface wraps the Kafka consumer API.
 */
public interface Consumer extends KafkaClient {
}
