package com.bayer.datahub.libs.interfaces;

/**
 * Empty interface - essentially for defining the Producer type for generic connect
 */
public interface Producer extends KafkaClient {
}
